Fix menu overflow

--- a/client/src/app/modules/shared/components/header-menu/header-menu.component.scss
+++ b/client/src/app/modules/shared/components/header-menu/header-menu.component.scss
@@ -1,3 +1,8 @@
+:host {
+  display: block;
+  overflow: visible; // Set overflow visible to actually enable overflow detection
+}
+
 .menubar {
   padding: 0.5rem;
   display: flex;
@@ -5,6 +10,7 @@
   color: #4b5563;
   align-items: center;
   position: relative;
+  width: 100%;
 }
 
 .menubar-start {
@@ -12,4 +18,8 @@
 
 .menubar-end {
   margin-left: auto;
+}
+
+.bars {
+  cursor: pointer;
 }
